# deeritc-task

./: README.md
book-mang_task/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.sh
book-mang_task/app/: __init__.py  config.py  extensions.py
book-mang_task/app/controllers/: auth_controller.py  book_controller.py
book-mang_task/app/models/: book.py  booking.py  user.py
book-mang_task/app/schemas/: user_schema.py
book-mang_task/app/services/: auth_service.py  book_service.py
book-mang_task/migrations/versions/: 6fa9297bc118_add_book_model_and_booking_model.py  83e816d53c0d_remove_isbn_field.py  917681bc47e2_make_isbn_optional_in_book_model.py  b092b852779a_set_default_value_for_published_date_in_.py  c7722ab3bf40_add_phone_field_in_user_model.py
book-mang_task/tests/: conftest.py  test_api.py
book-mang_task/tests/factories/: book_factory.py  user_factory.py
logger_task/: CMakeLists.txt  README.md
logger_task/src/: Logger.cpp  Logger.h  LoggerTest.cpp  main.cpp
